<resources>
  <string name="app_name">phoenix</string>
  <string name="title_activity_login">Phoenix</string>

  <string name="phoenix_shared_preferences">PhoenixSharedPreferences</string>
  <!-- Strings related to login -->
  <string name="prompt_email">User ID</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in">Sign in</string>
  <string name="action_sign_out">Sign out</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="error_invalid_email">User ID is invalid</string>
  <string name="error_invalid_password">Password is too short</string>
  <string name="error_incorrect_password">Password is incorrect</string>
  <string name="error_field_required">This field is required</string>
  <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

  <!--Strings Related to User Validation-->
  <string name="UserIDString">User ID is Required</string>
  <string name="UserPassword">Password is Required</string>

  <string name="title_activity_main">Phoenix</string>
  <string name="title_activity_radio_programs">Radio Programs</string>
  <string name="title_activity_schedules">Schedules</string>
  <string name="title_activity_users">Users</string>
  <string name="title_activity_radio_program_detail">Radio Program Detail</string>
  <string name="title_activity_user_detail">User Detail</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="action_settings">Settings</string>
  <string name="action_create_new">Create New</string>
  <string name="action_go_week">Go to</string>
  <string name="action_copy_week">Copy Week</string>
  <string name="action_save">Save</string>
  <string name="action_delete">Delete</string>
  <string name="action_copy">Copy</string>
  <string name="RolesText">Roles</string>


  <!--Roles Dialogue box-->
  <string name="ok_label">OK</string>
  <string name="dismiss_label">Dismiss</string>
  <string name="clear_all_label">Clear</string>

  <string name="Presenter">presenter</string>
  <string name="Producer">producer</string>
  <string name="StationManager">manager</string>
  <string name="SystemAdmin">admin</string>
  <string name="name_of_user">Name of User</string>
  <string name="password">Password</string>
  <string name="user_id">User ID</string>
  <string name="viewSchedules">Schedules</string>

  <string-array name="Roles">
    <item>admin</item>
    <item>manager</item>
    <item>presenter</item>
    <item>producer</item>
  </string-array>
</resources>
